<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kahrakib_white"
    tools:context=".fragments.common.ConditionFragment">


    <include
        android:id="@+id/pb_fragment_condition_component_loading"
        layout="@layout/component_loading_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/rl_fragment_condition_component_error"
        layout="@layout/component_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_fragment_condition_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--  app bar start -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/apl_fragment_password"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/kahrakib_white"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctl_fragment_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:expandedTitleMarginStart="@dimen/margin_global"
                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/padding_global"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/mtb_fragment_password"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_back"
                    app:navigationIconTint="@color/primaryColor"
                    app:title="@string/fragment_condition_titre" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <!-- app bar end -->


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_fragment_condition_sub_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/padding_global"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <!-- user information start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_kahrakib"
                    android:layout_gravity="center"
                    android:layout_marginVertical="80dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_one"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_two"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_three"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_four"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_five"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_six"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_seven"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_eight"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_nine"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_ten"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_condition_article_contenu"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>
            <!-- user information end-->

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>