<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_global">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lav_component_error"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/raw_error"
        app:lottie_speed="0.5"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_component_error_titre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/component_error_aller_titre"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/kahrakib_red_light"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintTop_toBottomOf="@id/lav_component_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_component_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/component_error_aller_message"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintTop_toBottomOf="@id/tv_component_error_titre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_component_error_ressayer"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:elevation="5dp"
        android:backgroundTint="@color/kahrakib_red"
        android:text="@string/component_error_ressayer"
        android:textColor="@color/kahrakib_white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/button_corners"
        app:rippleColor="@color/kahrakib_gray_light"
        app:layout_constraintVertical_bias=".7"
        app:layout_constraintTop_toBottomOf="@id/tv_component_error_message"
        app:layout_constraintStart_toStartOf="@id/mbtn_component_error_aller_accueill"
        app:layout_constraintEnd_toEndOf="@id/mbtn_component_error_aller_accueill"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_component_error_aller_accueill"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/component_error_aller_accueill"
        android:textColor="@color/kahrakib_black"
        android:textStyle="bold"
        android:backgroundTint="@color/kahrakib_white"
        android:elevation="5dp"
        app:cornerRadius="@dimen/button_corners"
        app:rippleColor="@color/kahrakib_gray_light"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/mbtn_component_error_ressayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>